[package]
name = "disco-rs"
description = "An implementation of the Disco cryptographic protocol framework in pure Rust"
version = "0.1.0"
authors = ["Michael Rosenberg <micro@fastmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["crypto", "strobe", "disco", "protocol", "framework"]
edition = "2018"

[dependencies]
rand = "0.7.2"
strobe-rs = "0.5.2"
take_mut = "0.2.2"

[dependencies.x25519-dalek]
version = "0.5.2"
default-features = false
features = ["u64_backend"]
