[package]
name = "disco"
description = "An implementation of the Disco cryptographic protocol framework in pure Rust"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>", "Michael Rosenberg <micro@fastmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["crypto", "strobe", "disco", "protocol", "framework"]
edition = "2018"

[dependencies]
failure = "0.1"
rand = "0.7.2"
strobe-rs = "0.5.2"

[dependencies.ed25519-dalek]
git = "https://github.com/dvc94ch/ed25519-dalek"
branch = "update-rand"

[dependencies.x25519-dalek]
version = "0.5.2"
default-features = false
features = ["u64_backend"]
git = "https://github.com/dvc94ch/x25519-dalek"
branch = "update-rand"
