[package]
name = "disco"
description = "An implementation of the Disco cryptographic protocol framework in pure Rust"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>", "Michael Rosenberg <micro@fastmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["crypto", "strobe", "disco", "protocol", "framework"]
edition = "2018"

[dependencies]
ed25519-dalek = "1.0.0-pre.3"
rand = "0.7.3"
strobe-rs = "0.5.2"
x25519-dalek = "0.6.0"
